# CityVibe

./: .env.example  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  DEVELOPMENT.md  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: base_dao.py  base_utils.py  celery_app.py  celery_db.py  config.py  database.py  log_config.py  main.py  pre_restart.py  requirements.txt
backend/app/auth/: dao.py  dependencies.py  models.py  router.py  service.py  utils.py
backend/app/events/: dao.py  models.py  router.py  schemas.py  service.py
backend/app/migration/: env.py
backend/app/migration/versions/: 00a2f52e786f_edit_events.py  11edf64cf14b_initial_revision.py  23df4a2134dc_add_photo_table.py  24e1c4f73358_add_reviews.py  390e6ba7545d_add_reviews.py  440cc95323f5_add_new_table_event.py  46c5dfb7dba9_edit.py  477e8ef2ff03_edit.py  6af8b89b2308_edit.py  c22131b58263_edit.py  c72ff41483ce_edit.py  e9a0b1565995_add_new_table_event.py  eda457cf470a_add_favorites.py
backend/app/services/: S3_service.py  email_service.py
backend/app/tasks/: S3_tasks.py  __init__.py  email_tasks.py
backend/app/templates/: mail.html  template_verify_email.html  template_verify_email.txt  verify_email.html
backend/app/templates/static/js/: verify_email.js
backend/app/templates/static/styles/: verify_email.css
backend/app/users/: dao.py  models.py  router.py  schemas.py  service.py
backend/app/utils/: S3_client.py  email_client.py
backend/scripts/: prestart.sh
backend/tests/: test_auth.py  test_user.py
(+17 files in other folders)
